# park_sem1_cpp_hw1

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  cppcheck_test.sh  valgrind_test.sh
data/: bad_user_input.txt  post_bad.txt  post_ok.txt  user_blog.txt  user_blog_ok.txt  user_input.txt  user_input_ok.txt
examples/: answer.txt  matrix.txt  test.txt
project/: main.c
project/include/: blog.h  dataloader.h  post.h  processing.h  reactions.h
project/lib/: CMakeLists.txt
project/lib/concurrent/: CMakeLists.txt
project/lib/concurrent/include/: Processing.h
project/lib/concurrent/source/: Matrix.c  Processing.c  SharedMatrix.c
project/lib/interface/: CMakeLists.txt
project/lib/interface/include/: Matrix.h  Mirror.h
project/lib/interface/source/: Mirror.c
project/lib/io/: CMakeLists.txt
project/lib/io/include/: MatrixIO.h
project/lib/io/source/: MatrixIO.c
project/lib/naive/: CMakeLists.txt
project/lib/naive/include/: Processing.h
project/lib/naive/source/: Matrix.c  Mirror.c  Processing.c
project/source/: blog.c  dataloader.c  post.c  processing.c  reactions.c
scripts/: linters_test.sh  memleak_test.sh
tests/: CMakeLists.txt  blog.cpp  common.cpp  dataloader.cpp  matrix.cpp  post.cpp  processing.cpp  reactions.cpp  stresstest.cpp
